--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <article class="post">
   <h1>{{ page.title }}</h1>
   <a href="{{ site.baseurl }}/" class="large-link">Back to overview</a>
-  <div class="date">{{ page.date | date: "%B, %Y" }}</div>
+  <div class="date">{{ page.date | date: "%B %Y" }}</div>
 
   <div class="entry">
     {{ content }}
