--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,6 @@
         {{ content }}
       </div>
 
-    </div><!-- /content-wrapper -->
-
-    {% include footer.html %}
+    </div>
   </body>
 </html>
