--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,10 @@
-    <div class="wrapper-masthead">
-      <div class="container">
+<div class="wrapper-masthead">
+    <div class="container">
         <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" alt="{{ site.name }}" /></a>
-
+            <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" alt="{{ site.name }}" /></a>
+            <nav>
+                <a href="{{ site.baseurl }}/about">Christoph Döberl</a>
+            </nav>
         </header>
-      </div>
     </div>
+</div>
