--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="post">
   <h1>{{ page.title }}</h1>
-  <a href="{{ site.baseurl }}/" class="large-link">Back to overview</a>
+  <a href="{{ site.baseurl }}/projects/" class="large-link">back to projects</a>
   <div class="date">{{ page.date | date: "%B %Y" }}</div>
 
   <div class="entry">
