--- a/style.scss
+++ b/style.scss
@@ -302,6 +302,10 @@ nav {
     margin-top: 10%;
     position: relative;
 
+    img {
+        max-width: 400px;
+    }
+
     a {
         color: black;
         font-weight: bold;
