--- a/style.scss
+++ b/style.scss
@@ -296,14 +296,14 @@ nav {
 }
 
 .home {
-    width: 400px;
+    width: 500px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10%;
+    margin-top: 5%;
     position: relative;
 
-    img {
-        max-width: 400px;
+    @include mobile {
+        width: 320px;
     }
 
     a {
