--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+        <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'>
 
-    <title>{{ site.name }} - {{ page.title }}</title>
+        <title>{{ site.name }} - {{ page.title }}</title>
 
-    <meta name="author" content="{{ site.author }}" />
-    <meta name="description" content="{{ site.description }}">
+        <meta name="author" content="{{ site.author }}" />
+        <meta name="description" content="{{ site.description }}">
 
-    <!--[if lt IE 9]>
-      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+        <!--[if lt IE 9]>
+            <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
 
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-  </head>
+        <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    </head>
 
-  <body>
-    <div class="content-wrapper">
+    <body>
+        <div class="content-wrapper">
 
-      {% include header.html %}
+            {% include header.html %}
+            
+            <div id="main" role="main" class="container">
+                {% include breadcrumbs.html %}
 
-      <div id="main" role="main" class="container">
-        {{ content }}
-      </div>
+                {{ content }}
+            </div>
 
-    </div>
-  </body>
+        </div>
+    </body>
 </html>
