--- a/style.scss
+++ b/style.scss
@@ -45,7 +45,7 @@ h1 {
     margin: 60px 0;
     a {
         color: $red;
-        &:hover {
+        &:hover, &:active {
             color: $darkRed;
         }
     }
@@ -215,9 +215,33 @@ img {
     border-bottom: 1px solid $medGray;
 }
 
-.banner {
-    height: 30px;
+.breadcrumbs {
     margin: 10px;
+    ol {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
+
+    li {
+        float: left;
+        margin-right: 5px;
+    }
+
+    .spacer {
+        font-size: 12px;
+    }
+
+    a {
+        color: $gray;
+        &:hover {
+            color: $darkRed;
+        }
+    }
+
+    .current {
+        color: $darkRed;
+    }
 }
 
 .site-avatar {
