--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -15,8 +15,8 @@ $medGray: #999;
 $lightGray: #ccc;
 $xlightGray: #f2f2f2;
 $white: #fff;
-$accent: #d42;
-$darkAccent: #c30;
+$accent: #50a162;
+$darkAccent: #2b803e;
 
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
