--- a/style.scss
+++ b/style.scss
@@ -221,6 +221,24 @@ img {
         font-size: 24px;
         margin: 48px 0 12px;
     }
+
+    .video-wrapper {
+        width: 100%;
+        display: inline-block;
+        position: relative;
+    }
+    .video-wrapper:after {
+        padding-top: 56.25%;
+        /* 16:9 ratio */
+        display: block;
+        content: '';
+    }
+
+    .video {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .site-info {
