some blank space in footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,8 @@
                 {{ content }}
             </div>
 
+            {% include footer.html %}
+
         </div>
     </body>
 </html>
