--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,8 @@
     <div id="contact" class="wrapper-footer">
       <div class="container">
         <footer class="footer">
+
+            <div class="blank"></div>
         </footer>
       </div>
     </div>
