--- a/style.scss
+++ b/style.scss
@@ -346,14 +346,17 @@ nav {
 }
 
 .home {
-    width: 440px;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 5%;
     position: relative;
 
+    margin-top: 10%;
+    max-width: 440px;
+
     @include mobile {
-        width: 320px;
+        margin-top: 25%;
+        max-width: 320px;
     }
 
     a {
@@ -367,14 +370,14 @@ nav {
 
     .link1 {
         position: absolute;
-        bottom: 100px;
-        right: 20px;
+        bottom: 80px;
+        right: 10px;
     }
 
     .link2 {
         position: absolute;
-        bottom: 70px;
-        right: 20px;
+        bottom: 50px;
+        right: 10px;
     }
 }
 
