--- a/style.scss
+++ b/style.scss
@@ -33,7 +33,8 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     color: $darkAccent;
-    font-family: $helveticaNeue;
+    font-family: $headline;
+    letter-spacing: 0.06em;
     font-weight: 700;
     line-height: 1.25;
     margin: 0;
@@ -215,6 +216,7 @@ img {
 }
 
 .page {
+    font-family: $text;
     margin: 0 10px 0 10px;
 
     h1 {
@@ -296,7 +298,6 @@ nav {
         font-size: 24px;
         line-height: 1.2;
         margin: 0 0 12px;
-        letter-spacing: normal;
         font-weight: 700;
     }
 
@@ -361,6 +362,7 @@ nav {
 
     a {
         color: black;
+        font-family: $headline;
         font-weight: bold;
         font-size: 18pt;
         &:hover {
