--- a/style.scss
+++ b/style.scss
@@ -32,6 +32,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
+    letter-spacing: 0.05em;
     color: $darkAccent;
     font-family: $headline;
     font-weight: 700;
@@ -363,6 +364,7 @@ nav {
     a {
         color: black;
         font-family: $headline;
+        letter-spacing: 0.05em;
         font-weight: bold;
         font-size: 18pt;
         &:hover {
