--- a/style.scss
+++ b/style.scss
@@ -278,6 +278,11 @@ nav {
     }
 }
 
+.contact-footer {
+    font-size: 12px;
+    text-align: right;
+}
+
 .post {
     max-width: 220px;
     float: left;
