--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,15 @@
-    <div id="contact" class="wrapper-footer">
-      <div class="container">
+<div id="contact" class="wrapper-footer">
+    <div class="container">
         <footer class="footer">
-
+            {% if page.image %}
+            <div class="contact-footer">
+                <b>Want to know more?</b>
+                <span>
+                    email me at <a href="mailto:christoph@doeberl.at">christoph@doeberl.at</a>
+                </span>
+            </div>
+            {% endif %}
             <div class="blank"></div>
         </footer>
-      </div>
     </div>
+</div>
