--- a/style.scss
+++ b/style.scss
@@ -279,8 +279,13 @@ nav {
 }
 
 .contact-footer {
-    font-size: 12px;
+    font-size: 11px;
     text-align: right;
+
+    b {
+        display: block;
+        margin-bottom: -5px;
+    }
 }
 
 .post {
@@ -294,6 +299,9 @@ nav {
     .description {
         font-family: $text;
         height: 69px;
+        @include phone {
+            height: 46px;
+        }
     }
 
     img {
@@ -301,7 +309,7 @@ nav {
         height: auto;
     }
 
-    @include mobile {
+    @include phone {
         max-width: 640px;
     }
 
@@ -366,7 +374,7 @@ nav {
     margin-top: 10%;
     max-width: 440px;
 
-    @include mobile {
+    @include phone {
         margin-top: 25%;
         max-width: 320px;
     }
@@ -406,7 +414,7 @@ footer {
 
     .blank {
         height: 200px;
-        @include mobile {
+        @include phone {
             height: 50px;
         }
     }
