--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,4 +5,11 @@ layout: default
 <article class="page">
     <h1>{{ page.title }}</h1>
     {{ content }}
+    <div class="gallery clearfix">
+    {% for img in page.images %}
+    <a href="/photos/{{ page.title }}/{{ img }}.png">
+    <img src="/photos/{{ page.title }}/thumbnails/{{ img }}.png" />
+    </a>
+    {% endfor %}
+    </div>
 </article>
