--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,16 +13,18 @@
         <!--[if lt IE 9]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
+        <script type="text/javascript" charset="utf-8" src="{{ site.baseurl }}/js/lightbox-plus-jquery.min.js"></script>
 
         <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/lightbox.css" />
+        <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/font-awesome.min.css">
     </head>
 
     <body>
         <div class="content-wrapper">
 
             {% include header.html %}
-            
+
             <div id="main" role="main" class="container">
                 {% include breadcrumbs.html %}
 
