--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
         <![endif]-->
         <script type="text/javascript" charset="utf-8" src="{{ site.baseurl }}/js/lightbox-plus-jquery.min.js"></script>
 
-        <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
+        <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/style.css" />
         <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/lightbox.css" />
         <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/font-awesome.min.css">
     </head>
