--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,6 +3,11 @@ layout: default
 ---
 
 <article class="page">
+    {% if page.github %}
+    <a class="pull-right" target="_blank" href="{{ page.github }}">
+        View project on <i class="fa fa-github" aria-hidden="true"></i> github
+    </a>
+    {% endif %}
     <h1>{{ page.title }}</h1>
     {{ content }}
     <div class="gallery clearfix">
