--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,9 +4,11 @@ layout: default
 
 <article class="page">
     {% if page.github %}
-    <a class="pull-right" target="_blank" href="{{ page.github }}">
-        View project on <i class="fa fa-github" aria-hidden="true"></i> github
+    <div class="pull-right">
+    <a target="_blank" href="//github.com/{{ page.github }}">
+        View on Github <i class="fa fa-github fa-lg" aria-hidden="true"></i>
     </a>
+    </div>
     {% endif %}
     <h1>{{ page.title }}</h1>
     {{ content }}
