--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,9 +16,11 @@
 
         <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/style.css" />
         <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/font-awesome.min.css">
+
     </head>
 
     <body>
         {{ content }}
+        {% include analytics.html %}
     </body>
 </html>
