--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,5 +9,6 @@
             </div>
             <div class="blank"></div>
         </footer>
+        {% include analytics.html %}
     </div>
 </div>
