--- a/css/style.scss
+++ b/css/style.scss
@@ -282,12 +282,10 @@ table th {
 .page {
     font-family: $text;
     margin: 0 10px 0 10px;
-
     h1 {
         font-size: 24px;
         margin: 48px 0 12px;
     }
-
     .video-wrapper {
         width: 100%;
         display: inline-block;
@@ -299,11 +297,16 @@ table th {
         display: block;
         content: '';
     }
-
     .video {
         position: absolute;
         width: 100%;
         height: 100%;
+    }
+    small {
+       font-size: small;
+       a {
+          color: $medGray;
+       }
     }
 }
 
